# backbone-services

./: .cirrus.yml  .gitignore  CONTRIBUTING.md  README.md  go.mod
.ijwb/: .bazelproject
cache/cmd/cache/: BUILD.bazel  main.go
cache/internal/impl/: BUILD.bazel  inmemory.go
cache/internal/impl/memcached/: BUILD.bazel  memcached.go  memcached_test.go
cache/internal/impl/testing/: BUILD.bazel  common.go
proto/cache/: BUILD.bazel  cache.proto
