load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cache_lib",
    srcs = ["main.go"],
    importpath = "github.com/cirruslabs/backbone-services/cache/cmd/cache",
    visibility = ["//visibility:private"],
    deps = [
        "//cache/internal/impl",
        "//proto/cache",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "cache",
    embed = [":cache_lib"],
    visibility = ["//visibility:public"],
)
