load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "impl",
    srcs = ["inmemory.go"],
    importpath = "github.com/cirruslabs/backbone-services/cache/internal/impl",
    visibility = ["//cache:__subpackages__"],
    deps = [
        "//proto/cache",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
