load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testing",
    srcs = ["common.go"],
    importpath = "github.com/cirruslabs/backbone-services/cache/internal/impl/testing",
    visibility = ["//cache:__subpackages__"],
    deps = [
        "//proto/cache",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//test/bufconn",
    ],
)
